forth/test/fail/test_const_fold_rhs_udivmod_zero.af
use' ../../lang.af
fun: test_const_fold_rhs_udivmod_zero { val -- rem quo } val 0 u/mod end
